--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>My Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
 </head>
-<style>:root {
+<style>
+    :root {
     --background-color: #000000;
     --text-color: #fff;
     --highlight-color: #febd01;
