--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ scroll-behavior: smooth;
         </video>
         <div class="home-content">
             <h6>Hi, My Name is</h6>
-            <h1>Dinh The Anh </h1>
+            <h1> The Anh </h1>
             <p> Birthday: September 17, 2007</p>
             <h3>Developer</h3>
             <div class="programming-languages">
@@ -234,7 +234,7 @@ scroll-behavior: smooth;
         </div>
         <div class="text">
             <h1> About Me </h1>
-            <h4>I'm Dinh The Anh</h4>
+            <h4>I'm The Anh</h4>
             <h6>A <span>Developer</span> in <span>Vietnam</span></h6>
             <p>I am a 17-year-old student from Vietnam who is passionate about coding, building apps, games, and discovering all things tech. I'm just learning HTML, CSS and I'm passionate about creating websites as I want and writing bots that have interesting features. I managed to create the website and I've been learning ever since.</p>
             <p>I've dabbled in various programming languages like Python,C++ and C# picking up new skills along the way. But coding isn't my only passion—I'm also a huge fan of video games, especiall Miside and all game FPS.</p>
