--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@ scroll-behavior: smooth;
             <div class="programming-languages">
                 <h4>Programming Languages</h4>
                 <div class="icons">
-                    <img src="icon/Python-logo-notext.png" alt="Python" style="width:50px; margin-right: 10px;">
-                    <img src="icon/HTML5_Badge.png" alt="HTML5" style="width:50px; margin-right: 10px;">
-                    <img src="icon/CSS3_logo.png" alt="CSS3" style="width:50px;">
+                    <img src="Python-logo-noteex.png " alt="Python" style="width:50px; margin-right: 10px;">
+                    <img src="HTML5_Badge.png " alt="HTML5" style="width:50px; margin-right: 10px;">
+                    <img src="CSS3_logo.png " alt="CSS3" style="width:50px;">
                 </div>
             </div>
     </section>
