--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ scroll-behavior: smooth;
             <div class="programming-languages">
                 <h4>Programming Languages</h4>
                 <div class="icons">
-                    <img src="Python-logo-notext " alt="Python" style="width:50px; margin-right: 10px;">
+                    <img src="Python-logo-notext.svg.png " alt="Python" style="width:50px; margin-right: 10px;">
                     <img src="HTML5_Badge.png " alt="HTML5" style="width:50px; margin-right: 10px;">
                     <img src="CSS3_logo.png " alt="CSS3" style="width:50px;">
                 </div>
