--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
+            <li><a href="#skill">Skill</a></li>
         </ul>
     </header>
 
@@ -47,6 +48,38 @@
             <p>So, if you're up for it, let's journey together into the exciting world of coding and gaming. There's so much to explore, and I'm just getting started! ❤️</p>
         </div>
     </section>
+    <section id="skill" class="skill">
+    <div class="container">
+      <div class="row">
+        <div class="section-title text-center">
+          <h1>About Skill</h1>
+        </div>
+      </div>
+    
+      <div class="skill-content">
+        <!-- Services Card 1 -->
+        <div class="skill-card">
+          <div class="icon-bg">
+            <i class="ri-map-fill"></i>
+          </div>
+          <h4>Learning capability</h4>
+          <p>
+            Even as a beginner, I constantly strive to learn and improve my web development skills.I have used tools like Bootstrap and React to design websites that are visually appealing, user-friendly, and highly compatible
+        </div>
+
+        <!-- Services Card 2 -->
+        <div class="skill-card">
+          <div class="icon-bg">
+            <i class="ri-store-3-line"></i>
+          </div>
+          <h4>self-learning ability</h4>
+          <p>
+            The learning curve can be challenging for me, but I'm dedicated and persistent in improving my skills. Though it takes time, I enjoy the process and constantly seek ways to enhance my abilities
+          </p>
+        </div>
+      </div>
+    </div>
+</section> 
     <div class="social-media-sidebar">
         <a href="https://www.facebook.com/AnhHaiRF"><i class="ri-facebook-fill"></i></a>
         <a href="https://discordapp.com/users/691471923246399549"><i class="ri-discord-fill"></i></a>
